--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "author": "",
   "dependencies": {
-    "bootstrap": "^3.3.6",
+    "bootstrap-sass": "^3.3.6",
     "font-awesome": "^4.5.0",
     "gulp": "^3.9.0",
     "gulp-browserify": "^0.5.1",
@@ -17,6 +17,7 @@
     "gulp-open": "^1.0.0",
     "gulp-react": "^3.1.0",
     "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.2.0",
     "lodash": "^4.0.0",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
