add guide to readme, edit package.json, change name for dev task

--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
-  "name": "reactjs-choice-selector",
-  "version": "1.0.0",
-  "description": "",
+  "name": "reactjs-choice-mulltilist",
+  "version": "0.0.1",
+  "description": "ReactJS component for items manipulation stored in two lists",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Denis Skulimosvkiy",
+  "url" : "https://github.com/skulden13/react-choice-multilist/issues",
+  "email" : "skulden13@gmail.com",
   "dependencies": {
+    "lodash": "^4.0.0",
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6"
+  },
+  "devDependencies": {
     "bootstrap-sass": "^3.3.6",
     "font-awesome": "^4.5.0",
     "gulp": "^3.9.0",
@@ -18,9 +25,6 @@
     "gulp-react": "^3.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.2.0",
-    "lodash": "^4.0.0",
-    "react": "^0.14.6",
-    "react-dom": "^0.14.6",
     "reactify": "^1.1.1",
     "run-sequence": "^1.1.5"
   }
